--- a/fill up and download/manifest.json
+++ b/fill up and download/manifest.json
@@ -4,10 +4,10 @@
     "manifest_version": 2,
     "browser_action": {
         "default_popup": "popup.html",
-        "default_icon": "logo.png"
+        "default_icon": "/image/to-do-list.png"
     },
     "icons": {
-        "128": "logo.png"
+        "128": "/image/to-do-list.png"
     },
     "permissions": ["activeTab"]
 }
