permissions changed to activetab only

--- a/alarm/manifest.json
+++ b/alarm/manifest.json
@@ -9,5 +9,5 @@
     "icons": {
         "128": "128.png"
     },
-    "permissions": [ "activeTab", "tabs", "storage" ]
+    "permissions": [ "activeTab" ]
 }
