changed name to background js

--- a/alarm/manifest.json
+++ b/alarm/manifest.json
@@ -6,6 +6,10 @@
         "default_popup": "popup.html",
         "default_icon": "64.png"
     },
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+    },
     "icons": {
         "128": "128.png"
     },
